# EDSPLUGIN

./: .gitignore  DEPLOY.md  Dockerfile  Dockerfile.webservice  docker-compose.yml  pyproject.toml  render.yaml  requirements-test.txt  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
data/: BJBR71FL.MAP
data/admin_boundaries/ETH/: ADM1.gpkg
docs/: PRESENTATION_DHS_PROGRAM_WORKERS.md
edhs_core/: __init__.py  config.py  main.py
edhs_core/api/: __init__.py  dhs_routes.py  routes.py  schemas.py
edhs_core/dhs_api/: __init__.py  client.py  country_codes.py  data_pipeline.py
edhs_core/indicators/: __init__.py  base.py  builtins_modern_contraception.py  builtins_stunting.py  builtins_tfr.py  builtins_women_autonomy.py  dhs_api_catalog.py  models.py  registry.py  stats.py
edhs_core/security/: __init__.py  auth.py  dependencies.py
edhs_core/spatial/: __init__.py  aggregation.py  gps.py
edhs_core/utils/: __init__.py  cleanup.py  logging_config.py  sessions.py
edhs_core/weighting/: __init__.py  core.py
edhs_qgis_plugin/: README.md  __init__.py  edhs_qgis_plugin.py  metadata.txt
scripts/: inject_streamlit_google_analytics.py  run_webservice.sh  test_google_analytics.py
tests/: __init__.py  conftest.py  test_api.py
web_dashboard/: README.md  dhs_indicator_catalog.py  dhs_research_features.py  requirements.txt  run_dashboard.sh  streamlit_app.py
web_dashboard/.streamlit/: config.toml
